2001-05-06  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/GtkComics.pm: Small tweaks to the List widget.
	* gtkcomics: gtkcomic's list of comics no longer has ${proc} on
	the list. This forced me to change my solution to lookup of the
	proc.
	
2001-05-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (.PHONY): Updated to include all phony targets
	(AP4NAME): Added gktcomic
	(PERLMODULES): Added GtkComics.pm

2001-05-01  Elliot Glayhser  <nuriko.chan@home.com>

	* gtkcomic, Netcomics/Gtkcomics.pm: Initial checkin. Please note
	that in there current state there's minimal funcionality, with
	the exception of listing comics. It's good at that.
	
2001-04-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (init): Made it so that the same Factory
	instance can be reused for download different sets of comics.
	(comic_names): Extracted the functionality out of list_comics that
	builds a hash of the comic ids & days behind, indexed by name.
	* Makefile (POD2MANRULES,POD2HTMLRULES): Added these rules to
	produce the manpages & html pages for the pod files.  Generalized
	the rules for producing man & html pages.
	(remake_check): Changed to simply run make distclean to remove the
	files that need to be regenerated.

2001-04-27  Elliot Glaysher  <nuriko.chan@home.com>

	* netcomics, show_comics -> doc/netcomics.pod, show_comics.pod:
	Moved docs to there own files
	
2001-04-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (SUBPATHS): Added replacing OLDMODULES, VERSION, and
	PKGVERSION.
	* netcomics.spec (%files): added /etc/netcomicsrc
	(%post data): changed OLDMODULES to be automatically replaced
	* Netcomics/Factory.pm (get_comics): Reverted code that creates
	the subdir name back to what it was before.

2001-04-26  Elliot Glaysher  <nuriko.chan@home.com>

	* Makefile (install): Fixed problems installing /etc/netomicsrc
	when packaging.
	* debian/conffiles: Added newline at the end of the file so debhelper